samples/_failures_safe/1761359578_7b1a76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_069cc4e6.c: In function ‘main’:
./samples/SAFE/__tmp_069cc4e6.c:150:39: error: expected ‘)’ at end of input
  150 |     if (decompressed.size == input_len
      |        ~                              ^
      |                                       )
./samples/SAFE/__tmp_069cc4e6.c:150:5: error: expected declaration or statement at end of input
  150 |     if (decompressed.size == input_len
      |     ^~
